update obsidian version to 0.13.19

--- a/obsidian/Dockerfile
+++ b/obsidian/Dockerfile
@@ -2,17 +2,18 @@ FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND=noninteractive LIBGL_ALWAYS_INDIRECT=1
 
-ARG VERSION=0.12.15
+ARG VERSION=0.13.19
 
 RUN apt update \
-    && apt install -y wget fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto-cjk fonts-noto-cjk-extra xfonts-base \
-    && apt install -y yaru-theme-* \
-    && apt install -y firefox \
-    && wget --tries=3 https://github.com/obsidianmd/obsidian-releases/releases/download/v${VERSION}/obsidian_${VERSION}_amd64.deb \
-    && apt install -y ./obsidian_${VERSION}_amd64.deb \
-    && chmod 4755 /opt/Obsidian/chrome-sandbox \
-    && rm -rf obsidian_${VERSION}_amd64.deb \
+    && apt install -y fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto-cjk fonts-noto-cjk-extra xfonts-base \
+    && apt install -y wget firefox yaru-theme-* \
+    && apt install -y libgtk2.0-0 libxshmfence-dev libnss3-dev libatk-bridge2.0-dev libdrm-dev libgtk-3-dev libasound2-dev \
+    && wget https://github.com/obsidianmd/obsidian-releases/releases/download/v${VERSION}/obsidian-${VERSION}.tar.gz \
+    && tar -C /opt -xvf obsidian-${VERSION}.tar.gz \
+    && rm -rf obsidian-${VERSION}.tar.gz \
     && useradd -m -s /bin/bash xundaoxd \
     && rm -rf /var/lib/apt/lists/*
 
 USER xundaoxd
+
+CMD ["/opt/obsidian-${VERSION}/obsidian", "--no-sandbox"]
