--- a/obsidian/Dockerfile
+++ b/obsidian/Dockerfile
@@ -10,10 +10,11 @@ RUN apt update \
     && apt install -y libgtk2.0-0 libxshmfence-dev libnss3-dev libatk-bridge2.0-dev libdrm-dev libgtk-3-dev libasound2-dev \
     && wget https://github.com/obsidianmd/obsidian-releases/releases/download/v${VERSION}/obsidian-${VERSION}.tar.gz \
     && tar -C /opt -xvf obsidian-${VERSION}.tar.gz \
+    && mv /opt/obsidian-${VERSION} /opt/obsidian \
     && rm -rf obsidian-${VERSION}.tar.gz \
     && useradd -m -s /bin/bash xundaoxd \
     && rm -rf /var/lib/apt/lists/*
 
 USER xundaoxd
 
-CMD ["/opt/obsidian-${VERSION}/obsidian", "--no-sandbox"]
+CMD ["/opt/obsidian/obsidian", "--no-sandbox"]
