add siyuan support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
         context:
           - cuda-cmake
           - obsidian
+          - siyuan
           - octave
           - doxygen
           - you-get
