--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,12 @@ jobs:
     steps:
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
+      - uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ matrix.context }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-${{ matrix.context }}
       - uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -31,3 +37,8 @@ jobs:
           file: ${{ matrix.context }}/Dockerfile
           push: true
           tags: xundaoxd/${{ matrix.context }}:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
