refactor all dockerfile

--- a/cuda-cmake/Dockerfile
+++ b/cuda-cmake/Dockerfile
@@ -1,6 +1,6 @@
-FROM nvidia/cuda:11.4.2-cudnn8-devel-ubuntu20.04
+FROM xundaoxd/base:latest
 
-ENV DEBIAN_FRONTEND=noninteractive
+ARG DEBIAN_FRONTEND=noninteractive
 
 ARG VERSION=3.22.1
 
