--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,32 @@ on:
       - 'master'
 
 jobs:
+  base:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-base
+          restore-keys: |
+            ${{ runner.os }}-buildx-base
+      - uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/build-push-action@v2
+        with:
+          file: base/Dockerfile
+          push: true
+          tags: xundaoxd/base:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
   build-push:
     runs-on: ubuntu-latest
     strategy:
@@ -18,6 +44,7 @@ jobs:
           - you-get
           - go
           - vlc
+    needs: [base]
     steps:
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
