--- a/octave/Dockerfile
+++ b/octave/Dockerfile
@@ -1,10 +1,8 @@
-FROM ubuntu:20.04
+FROM xundaoxd/base:latest
 
-ENV DEBIAN_FRONTEND=noninteractive LIBGL_ALWAYS_INDIRECT=1
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update \
-    && apt install -y wget fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto-cjk fonts-noto-cjk-extra xfonts-base \
-    && apt install -y yaru-theme-* \
     && apt install -y octave \
     && useradd -m -s /bin/bash xundaoxd \
     && rm -rf /var/lib/apt/lists/*
