--- a/gimp/Dockerfile
+++ b/gimp/Dockerfile
@@ -3,10 +3,10 @@ FROM ubuntu:20.04
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt update \
-    && apt install -y vlc \
+    && apt install -y gimp \
     && useradd -m -s /bin/bash xundaoxd \
     && rm -rf /var/lib/apt/lists/*
 
 USER xundaoxd
 
-CMD ["vlc"]
+CMD ["gimp"]
