--- a/you-get/Dockerfile
+++ b/you-get/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:20.04
 
-ENV DEBIAN_FRONTEND=noninteractive
+ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt update \
     && apt install -y python3-pip ffmpeg \
