--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
           - you-get
           - go
           - vlc
+          - gimp
     needs: [base]
     steps:
       - uses: docker/setup-qemu-action@v1
