--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,42 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-  build-push:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        context:
+          - doxygen
+          - you-get
+          - go
+          - vlc
+          - gimp
+          - onedrive
+    steps:
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ matrix.context }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-${{ matrix.context }}
+      - uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/build-push-action@v2
+        with:
+          file: ${{ matrix.context }}/Dockerfile
+          push: true
+          tags: xundaoxd/${{ matrix.context }}:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+  build-cuda:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -40,12 +75,6 @@ jobs:
           - cuda-cmake
           - obsidian
           - octave
-          - doxygen
-          - you-get
-          - go
-          - vlc
-          - gimp
-          - onedrive
     needs: [base]
     steps:
       - uses: docker/setup-qemu-action@v1
