--- a/onedrive/Dockerfile
+++ b/onedrive/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:20.04
 
+ARG DEBIAN_FRONTEND=noninteractive
+
 RUN apt update \
     && apt install -y software-properties-common \
     && add-apt-repository -y ppa:yann1ck/onedrive \
