add user for cuda-cmake

--- a/cuda-cmake/Dockerfile
+++ b/cuda-cmake/Dockerfile
@@ -9,6 +9,9 @@ RUN apt update \
     && wget --tries=3 https://github.com/Kitware/CMake/releases/download/v${VERSION}/cmake-${VERSION}-linux-x86_64.tar.gz \
     && tar -C /opt/ -xvf cmake-${VERSION}-linux-x86_64.tar.gz \
     && rm -rf cmake-${VERSION}-linux-x86_64.tar.gz \
+    && useradd -m -s /bin/bash xundaoxd \
     && rm -rf /var/lib/apt/lists/*
+
+USER xundaoxd
 
 ENV PATH="/opt/cmake-${VERSION}-linux-x86_64/bin:${PATH}"
