--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/login-action@v1 
+        with:
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.tencent_USERNAME }}
+          password: ${{ secrets.tencent_PASSWORD }}
       - uses: docker/build-push-action@v2
         with:
           file: base/Dockerfile
           push: true
-          tags: xundaoxd/base:latest
+          tags: |
+            xundaoxd/base:latest
+            ccr.ccs.tencentyun.com/xundaoxd/base:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
@@ -56,11 +63,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/login-action@v1 
+        with:
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.tencent_USERNAME }}
+          password: ${{ secrets.tencent_PASSWORD }}
       - uses: docker/build-push-action@v2
         with:
           file: ${{ matrix.context }}/Dockerfile
           push: true
-          tags: xundaoxd/${{ matrix.context }}:latest
+          tags: |
+            xundaoxd/${{ matrix.context }}:latest
+            ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
@@ -90,11 +104,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/login-action@v1 
+        with:
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.tencent_USERNAME }}
+          password: ${{ secrets.tencent_PASSWORD }}
       - uses: docker/build-push-action@v2
         with:
           file: ${{ matrix.context }}/Dockerfile
           push: true
-          tags: xundaoxd/${{ matrix.context }}:latest
+          tags: |
+            xundaoxd/${{ matrix.context }}:latest
+            ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
