--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,6 @@ jobs:
             ${{ runner.os }}-buildx-base
       - uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/login-action@v1 
-        with:
           registry: ccr.ccs.tencentyun.com
           username: ${{ secrets.tencent_USERNAME }}
           password: ${{ secrets.tencent_PASSWORD }}
@@ -30,9 +26,7 @@ jobs:
         with:
           file: base/Dockerfile
           push: true
-          tags: |
-            xundaoxd/base:latest
-            ccr.ccs.tencentyun.com/xundaoxd/base:latest
+          tags: ccr.ccs.tencentyun.com/xundaoxd/base:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
@@ -61,10 +55,6 @@ jobs:
             ${{ runner.os }}-buildx-${{ matrix.context }}
       - uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/login-action@v1 
-        with:
           registry: ccr.ccs.tencentyun.com
           username: ${{ secrets.tencent_USERNAME }}
           password: ${{ secrets.tencent_PASSWORD }}
@@ -72,9 +62,7 @@ jobs:
         with:
           file: ${{ matrix.context }}/Dockerfile
           push: true
-          tags: |
-            xundaoxd/${{ matrix.context }}:latest
-            ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
+          tags: ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
@@ -102,10 +90,6 @@ jobs:
             ${{ runner.os }}-buildx-${{ matrix.context }}
       - uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/login-action@v1 
-        with:
           registry: ccr.ccs.tencentyun.com
           username: ${{ secrets.tencent_USERNAME }}
           password: ${{ secrets.tencent_PASSWORD }}
@@ -113,9 +97,9 @@ jobs:
         with:
           file: ${{ matrix.context }}/Dockerfile
           push: true
-          tags: |
-            xundaoxd/${{ matrix.context }}:latest
-            ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
+          build-args: |
+            BASE_IMAGE=ccr.ccs.tencentyun.com/xundaoxd/base:latest
+          tags: ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
