--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,14 +19,13 @@ jobs:
             ${{ runner.os }}-buildx-base
       - uses: docker/login-action@v1 
         with:
-          registry: ccr.ccs.tencentyun.com
-          username: ${{ secrets.tencent_USERNAME }}
-          password: ${{ secrets.tencent_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: docker/build-push-action@v2
         with:
           file: base/Dockerfile
           push: true
-          tags: ccr.ccs.tencentyun.com/xundaoxd/base:latest
+          tags: xundaoxd/base:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
@@ -55,14 +54,13 @@ jobs:
             ${{ runner.os }}-buildx-${{ matrix.context }}
       - uses: docker/login-action@v1 
         with:
-          registry: ccr.ccs.tencentyun.com
-          username: ${{ secrets.tencent_USERNAME }}
-          password: ${{ secrets.tencent_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: docker/build-push-action@v2
         with:
           file: ${{ matrix.context }}/Dockerfile
           push: true
-          tags: ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
+          tags: xundaoxd/${{ matrix.context }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
@@ -90,16 +88,15 @@ jobs:
             ${{ runner.os }}-buildx-${{ matrix.context }}
       - uses: docker/login-action@v1 
         with:
-          registry: ccr.ccs.tencentyun.com
-          username: ${{ secrets.tencent_USERNAME }}
-          password: ${{ secrets.tencent_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: docker/build-push-action@v2
         with:
           file: ${{ matrix.context }}/Dockerfile
           push: true
           build-args: |
-            BASE_IMAGE=ccr.ccs.tencentyun.com/xundaoxd/base:latest
-          tags: ccr.ccs.tencentyun.com/xundaoxd/${{ matrix.context }}:latest
+            BASE_IMAGE=xundaoxd/base:latest
+          tags: xundaoxd/${{ matrix.context }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
