--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,13 @@ on:
 jobs:
   base:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - tag: xundaoxd/base:latest
+            docker: base/Dockerfile
+          - tag: xundaoxd/base-cuda:latest
+            docker: base/Dockerfile.cuda
     steps:
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
@@ -16,16 +23,16 @@ jobs:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-base
           restore-keys: |
-            ${{ runner.os }}-buildx-base
+            ${{ runner.os }}-buildx-${{ matrix.docker }}
       - uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: docker/build-push-action@v2
         with:
-          file: base/Dockerfile
+          file: ${{ matrix.docker }}
+          tags: ${{ matrix.tag }}
           push: true
-          tags: xundaoxd/base:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
@@ -43,35 +50,6 @@ jobs:
           - vlc
           - gimp
           - onedrive
-    steps:
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-      - uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ matrix.context }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-${{ matrix.context }}
-      - uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/build-push-action@v2
-        with:
-          file: ${{ matrix.context }}/Dockerfile
-          push: true
-          tags: xundaoxd/${{ matrix.context }}:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      - run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-  build-cuda:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        context:
           - cuda-cmake
           - obsidian
           - octave
@@ -93,10 +71,8 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           file: ${{ matrix.context }}/Dockerfile
-          push: true
-          build-args: |
-            BASE_IMAGE=xundaoxd/base:latest
           tags: xundaoxd/${{ matrix.context }}:latest
+          push: true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - run: |
