--- a/onedrive/Dockerfile
+++ b/onedrive/Dockerfile
@@ -1,10 +1,9 @@
-ARG BASE_IMAGE=ubuntu:20.04
+ARG BASE_IMAGE=xundaoxd/base:latest
 FROM ${BASE_IMAGE}
 
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt update \
-    && apt install -y software-properties-common \
     && add-apt-repository -y ppa:yann1ck/onedrive \
     && apt install -y onedrive \
     && rm -rf /var/lib/apt/lists/* \
