--- a/base/Dockerfile.cuda
+++ b/base/Dockerfile.cuda
@@ -10,7 +10,7 @@ RUN apt update \
 
 RUN apt update \
     && apt install -y wget firefox \
-    && apt install -y fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto-cjk fonts-noto-cjk-extra xfonts-base \
+    && apt install -y fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto xfonts-base \
     && apt install -y yaru-theme-* \
     && rm -rf /var/lib/apt/lists/*
 
