--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -3,8 +3,7 @@ FROM ${BASE_IMAGE}
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt update \
-    && wget https://golang.google.cn/dl/go1.17.6.linux-amd64.tar.gz \
+RUN wget https://golang.google.cn/dl/go1.17.6.linux-amd64.tar.gz \
     && tar -C /opt -xvf go1.17.6.linux-amd64.tar.gz \
     && rm -rf go1.17.6.linux-amd64.tar.gz \
     && useradd -m -s /bin/bash xundaoxd \
