--- a/cuda-cmake/Dockerfile
+++ b/cuda-cmake/Dockerfile
@@ -8,8 +8,7 @@ ARG VERSION=3.22.1
 RUN wget --tries=3 https://github.com/Kitware/CMake/releases/download/v${VERSION}/cmake-${VERSION}-linux-x86_64.tar.gz \
     && tar -C /opt/ -xvf cmake-${VERSION}-linux-x86_64.tar.gz \
     && rm -rf cmake-${VERSION}-linux-x86_64.tar.gz \
-    && useradd -m -s /bin/bash xundaoxd \
-    && rm -rf /var/lib/apt/lists/*
+    && useradd -m -s /bin/bash xundaoxd
 
 USER xundaoxd
 
