--- a/octave/Dockerfile
+++ b/octave/Dockerfile
@@ -5,7 +5,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt update \
     && apt install -y octave \
-    && useradd -m -s /bin/bash xundaoxd \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && useradd -m -s /bin/bash xundaoxd
 
 USER xundaoxd
