--- a/you-get/Dockerfile
+++ b/you-get/Dockerfile
@@ -6,7 +6,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt update \
     && apt install -y python3-pip ffmpeg \
     && pip3 install you-get \
-    && useradd -m -s /bin/bash xundaoxd \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && useradd -m -s /bin/bash xundaoxd
 
 USER xundaoxd
