--- a/base/Dockerfile.cuda
+++ b/base/Dockerfile.cuda
@@ -9,9 +9,10 @@ RUN apt update \
     && rm -rf /var/lib/apt/lists/*
 
 RUN apt update \
-    && apt install -y wget firefox \
-    && apt install -y fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto xfonts-base \
-    && apt install -y yaru-theme-* \
+    && apt install -y software-properties-common xdg-utils \
+    && apt install -y fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto xfonts-base yaru-theme-* \
+    && apt install -y python3-pip ffmpeg graphviz \
+    && apt install -y wget firefox evince \
     && rm -rf /var/lib/apt/lists/*
 
 RUN apt update \
