--- a/base/Dockerfile.cuda
+++ b/base/Dockerfile.cuda
@@ -9,7 +9,7 @@ RUN apt update \
     && rm -rf /var/lib/apt/lists/*
 
 RUN apt update \
-    && apt install -y software-properties-common xdg-utils \
+    && apt install -y software-properties-common xdg-utils ca-certificates \
     && apt install -y fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto xfonts-base yaru-theme-* \
     && apt install -y python3-pip ffmpeg graphviz \
     && apt install -y wget firefox evince \
