--- a/cuda-cmake/Dockerfile
+++ b/cuda-cmake/Dockerfile
@@ -11,9 +11,10 @@ RUN wget --tries=3 https://github.com/Kitware/CMake/releases/download/v${VERSION
     && apt update \
     && apt install -y ninja-build flex bison bison-doc info man-db manpages manpages-dev \
         libgflags-dev libgtest-dev \
-    && (PATH="/opt/cmake-3.22.1-linux-x86_64/bin:${PATH}" \
+    && (PATH="/opt/cmake-${VERSION}-linux-x86_64/bin:${PATH}" \
         && cd /usr/src/googletest \
         && cmake -B build \
+        && cmake --build build \
         && cmake --install build) \
     && rm -rf /var/lib/apt/lists/* \
     && useradd -m -s /bin/bash xundaoxd
