--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+      - run: |
+          cat dockerfiles/base/Dockerfile.common >> dockerfiles/${{ matrix.docker }}
       - uses: docker/build-push-action@v2
         with:
           file: dockerfiles/${{ matrix.docker }}
