--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -16,8 +16,8 @@ USER xundaoxd
 ENV PATH="/opt/miniconda3/bin:${PATH}"
 
 RUN conda install -y ipython \
-    && conda install -y -c conda-forge -c pytorch numpy matplotlib pandas seaborn scipy scikit-learn \
-    cudatoolkit=11.4 \
+    && conda install -y -c pytorch numpy matplotlib pandas seaborn scipy scikit-learn \
+    cudatoolkit=11.3 \
     pytorch torchvision torchaudio \
     tensorflow-gpu \
     && python3 -m pip install --find-links https://release.oneflow.info oneflow==0.7.0+cu112 \
