--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           cat dockerfiles/base/Dockerfile.common >> dockerfiles/${{ matrix.docker }}
       - uses: docker/build-push-action@v2
         with:
-          context: dockerfiles
+          context: .
           file: dockerfiles/${{ matrix.docker }}
           tags: ${{ matrix.tag }}
           push: true
@@ -59,7 +59,7 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
       - uses: docker/build-push-action@v2
         with:
-          context: dockerfiles
+          context: .
           file: dockerfiles/${{ matrix.context }}/Dockerfile
           tags: xundaoxd/${{ matrix.context }}:latest
           push: true
