--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
             docker: base/Dockerfile.cuda
     steps:
       - uses: actions/checkout@v3
+      - uses: technote-space/get-diff-action@v6
+        with:
+          PATTERNS: |
+            +dockerfiles/${{ matrix.docker }}
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -26,6 +30,7 @@ jobs:
       - run: |
           cat dockerfiles/base/Dockerfile.common >> dockerfiles/${{ matrix.docker }}
       - uses: docker/build-push-action@v2
+        if: ${{ env.GIT_DIFF  }}
         with:
           context: .
           file: dockerfiles/${{ matrix.docker }}
@@ -51,6 +56,10 @@ jobs:
     needs: [base]
     steps:
       - uses: actions/checkout@v3
+      - uses: technote-space/get-diff-action@v6
+        with:
+          PATTERNS: |
+            +dockerfiles/${{ matrix.context }}/Dockerfile
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -58,6 +67,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - uses: docker/build-push-action@v2
+        if: ${{ env.GIT_DIFF  }}
         with:
           context: .
           file: dockerfiles/${{ matrix.context }}/Dockerfile
