install tensorflow in ml/Dockerfile

--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -12,12 +12,16 @@ RUN wget -O /tmp/Miniconda3-${VERSION}-Linux-x86_64.sh https://repo.anaconda.com
     && chown xundaoxd -R /opt/miniconda3
 
 USER xundaoxd
-
 ENV PATH="/opt/miniconda3/bin:${PATH}"
 
-RUN conda install -y -c pytorch \
-    ipython \
+RUN conda install -y ipython \
     numpy matplotlib pandas seaborn scipy scikit-learn \
+    && conda clean -a -y
+
+RUN conda install -y -c pytorch \
     cudatoolkit=11.3 \
     pytorch torchvision torchaudio \
     && conda clean -a -y
+
+RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-2.8.0-cp37-cp37m-manylinux2010_x86_64.whl \
+    && pip cache purge
