--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,8 @@ jobs:
       - uses: technote-space/get-diff-action@v6
         with:
           PATTERNS: |
-            +dockerfiles/${{ matrix.docker }}
+            dockerfiles/${{ matrix.docker }}
+            .github/workflows/build.yml
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -59,7 +60,8 @@ jobs:
       - uses: technote-space/get-diff-action@v6
         with:
           PATTERNS: |
-            +dockerfiles/${{ matrix.context }}/Dockerfile
+            dockerfiles/${{ matrix.context }}/Dockerfile
+            .github/workflows/build.yml
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
