add vscode support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
           - octave
           - blender
           - ml
+          - vscode
     needs: [base]
     steps:
       - uses: actions/checkout@v3
