build base when Dockerfile.common changed

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           PATTERNS: |
             dockerfiles/${{ matrix.docker }}
+            dockerfiles/base/Dockerfile.common
             .github/workflows/build.yml
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
@@ -62,6 +63,7 @@ jobs:
         with:
           PATTERNS: |
             dockerfiles/${{ matrix.context }}/Dockerfile
+            dockerfiles/base
             .github/workflows/build.yml
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
