--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
           - vlc
           - gimp
           - onedrive
-          - cuda-cmake
+          - development
           - obsidian
           - octave
           - blender
