--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,6 @@ jobs:
           PATTERNS: |
             dockerfiles/${{ matrix.docker }}
             dockerfiles/base/Dockerfile.common
-            .github/workflows/build.yml
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -62,7 +61,6 @@ jobs:
           PATTERNS: |
             dockerfiles/${{ matrix.context }}/Dockerfile
             dockerfiles/base
-            .github/workflows/build.yml
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -92,7 +90,7 @@ jobs:
           PATTERNS: |
             dockerfiles/${{ matrix.context }}/Dockerfile
             dockerfiles/base
-            .github/workflows/build.yml
+            dockerfiles/development
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
