--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
           PATTERNS: |
             dockerfiles/${{ matrix.context }}/Dockerfile
             dockerfiles/base
-            dockerfiles/development
+            dockerfiles/development/Dockerfile
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
