--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           PATTERNS: |
             dockerfiles/${{ matrix.context }}/Dockerfile
-            dockerfiles/base
+            dockerfiles/base/*
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -89,7 +89,7 @@ jobs:
         with:
           PATTERNS: |
             dockerfiles/${{ matrix.context }}/Dockerfile
-            dockerfiles/base
+            dockerfiles/base/*
             dockerfiles/development/Dockerfile
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
