update conda in xundaoxd/development

--- a/dockerfiles/development/Dockerfile
+++ b/dockerfiles/development/Dockerfile
@@ -13,14 +13,15 @@ ARG CONDA_VERSION=py37_4.11.0
 RUN wget -O /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh https://repo.anaconda.com/miniconda/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
     && chmod +x /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
     && /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh -b -p /opt/miniconda3 \
-    && rm -rf /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh
-ENV PATH="/opt/miniconda3/bin:${PATH}"
-
-RUN conda install -y autopep8 pylint \
-    ipython \
-    numpy matplotlib pandas seaborn scipy scikit-learn \
-    opencv \
+    && rm -rf /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
+    && /opt/miniconda3/bin/conda update --all -y \
+    && /opt/miniconda3/bin/conda install -y \
+        ipython \
+        autopep8 pylint \
+        numpy matplotlib pandas seaborn scipy scikit-learn \
+        opencv \
     && conda clean -a -y
+ENV PATH="/opt/miniconda3/bin:${PATH}"
 
 ARG CMAKE_VERSION=3.23.1
 RUN wget -O /tmp/cmake-${CMAKE_VERSION}-linux-x86_64.tar.gz https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.tar.gz \
