--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -3,6 +3,8 @@ FROM ${BASE_IMAGE}
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+USER root
+
 RUN conda install -y pytorch torchvision torchaudio cudatoolkit=11.3 -c pytorch \
     && conda install -y pillow=6.2 \
     && conda clean -a -y
@@ -16,4 +18,12 @@ RUN pip install paddlepaddle-gpu==2.2.2.post112 -f https://www.paddlepaddle.org.
 
 RUN pip install onnxruntime-gpu==1.10 \
     && pip cache purge
+
+RUN apt update \
+    && apt install -y octave \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN if [ ! `cat /etc/passwd | grep xundaoxd` ]; then useradd -m -s /bin/bash xundaoxd; fi
+
+USER xundaoxd
 
