--- a/dockerfiles/vscode/Dockerfile
+++ b/dockerfiles/vscode/Dockerfile
@@ -7,7 +7,7 @@ USER root
 
 RUN wget -q https://packages.microsoft.com/keys/microsoft.asc -O- | apt-key add - \
     && add-apt-repository "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main" \
-    && apt install -y code \
+    && apt install -y code ctags \
     && rm -rf /var/lib/apt/lists/*
 
 USER xundaoxd
