--- a/dockerfiles/base/Dockerfile.common
+++ b/dockerfiles/base/Dockerfile.common
@@ -1,4 +1,5 @@
 RUN apt update \
+    && apt install -y apt-transport-https curl gnupg \
     && apt install -y software-properties-common xdg-utils ca-certificates \
     && apt install -y language-pack-en* language-pack-zh* language-pack-gnome-en* language-pack-gnome-zh* \
     && apt install -y fonts-firacode fonts-wqy-microhei ttf-wqy-zenhei fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto xfonts-base \
