update ml image

--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -13,9 +13,8 @@ RUN if [ ! `cat /etc/passwd | grep xundaoxd` ]; then useradd -m -s /bin/bash xun
 
 USER xundaoxd
 
-RUN conda install -y pillow=6.2 \
-    && pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113 \
-    && pip install --pre torch-mlir -f https://github.com/llvm/torch-mlir/releases \
+RUN conda install -y pytorch torchvision torchaudio cudatoolkit=11.3 -c pytorch \
+    && conda install -y pillow=6.2 \
     && pip cache purge \
     && conda clean -a -y
 
@@ -24,9 +23,6 @@ RUN conda install -y protobuf=3.20 \
     && pip install --upgrade tensorflow_hub \
     && pip cache purge \
     && conda clean -a -y
-
-RUN pip install paddlepaddle-gpu==2.2.2.post112 -f https://www.paddlepaddle.org.cn/whl/linux/mkl/avx/stable.html \
-    && pip cache purge
 
 RUN pip install onnxruntime-gpu==1.10 \
     && pip cache purge
