fix torch install error

--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -13,7 +13,7 @@ RUN if [ ! `cat /etc/passwd | grep xundaoxd` ]; then useradd -m -s /bin/bash xun
 
 USER xundaoxd
 
-RUN conda install -y pytorch torchvision torchaudio cudatoolkit=11.3 -c pytorch \
+RUN pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113 \
     && conda install -y pillow=6.2 \
     && pip cache purge \
     && conda clean -a -y
