--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -19,3 +19,5 @@ RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_g
 RUN pip install onnxruntime-gpu tf2onnx skl2onnx \
     && pip cache purge
 
+RUN pip install --upgrade "jax[cuda]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html \
+    && pip cache purge
